# opengltest

./: CMakeLists.txt
include/: Disk.hpp  Model.hpp  Shader.hpp  Vertex.hpp  common_includes.hpp  glTest.hpp
include/fuzzygl/: Disk.hpp  World.hpp  glTest.hpp
include/fuzzygl/resources/: Model.hpp  ModelData.hpp  ResourceManager.hpp  Shader.hpp
include/fuzzygl/world/: Camera.hpp  CameraBehaviors.hpp  RenderObject.hpp  World.hpp
include/glad/: gl.h
shaders/: fragment.glsl  vertex.glsl
shaders/disk/: fragment.glsl  vertex.glsl
shaders/ocean/: fragment.glsl  vertex.glsl
shaders/rainbow/: vertex.glsl
src/: Disk.cpp  Shader.cpp  Vertex.cpp  glTest.hpp  main.cpp  setup.cpp  test.cpp  test0.cpp
src/resources/: Model.cpp  ModelData.cpp  ResourceManager.cpp  ResourceManger.cpp  Shader.cpp
src/world/: Camera.cpp  CameraBehaviors.cpp  RenderObject.cpp  World.cpp
